--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,7 @@ h1 {
   justify-content: space-between;
   padding: 0 10px;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .flashcard-text {
@@ -77,6 +78,50 @@ h1 {
   font-weight: 700;
 }
 
-.flashcard ion-icon{
-    font-size: 25px;
+.flashcard ion-icon {
+  font-size: 28px;
+}
+
+/* HEADER */
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 45px;
+  margin-bottom: 40px;
+}
+
+.header h1 {
+  margin-left: 20px;
+}
+
+/* PLAYSCREEN */
+
+.play-screen-logo {
+  height: 60px;
+  width: 52px;
+}
+
+/* FOOTER */
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: #ffffff;
+  height: 70px;
+  width: 100%;
+  box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer p {
+  font-family: Recursive;
+  font-size: 18px;
+  font-weight: 400;
 }
