--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,7 @@ h1 {
   margin-bottom: 20px;
 }
 
-.flashcard-text {
+.flashcard p {
   font-family: Recursive;
   font-size: 16px;
   font-weight: 700;
@@ -81,6 +81,33 @@ h1 {
 .flashcard ion-icon {
   font-size: 28px;
 }
+
+.turned-flashcard {
+  width: 300px;
+  height: 130px;
+  background-color: #ffffff;
+  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.turned-flashcard img {
+  width: 30px;
+  height: 20px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+
+}
+
+.turned-flashcard p {
+  font-family: Recursive;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 
 /* HEADER */
 
