--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,6 +90,9 @@ h1 {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
 }
 
@@ -99,7 +102,6 @@ h1 {
   position: absolute;
   bottom: 10px;
   right: 10px;
-
 }
 
 .turned-flashcard p {
@@ -109,6 +111,24 @@ h1 {
   margin-top: 10px;
 }
 
+.turned-flashcard > div {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.answer-options {
+  width: 85px;
+  height: 35;
+  border: none;
+  border-radius: 5px;
+  font-family: Recursive;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0em;
+  color: #FFFFFF;
+  text-align: center;
+}
 
 /* HEADER */
 
@@ -152,4 +172,18 @@ h1 {
   font-family: Recursive;
   font-size: 18px;
   font-weight: 400;
+}
+
+/* COLORS */
+
+.red {
+  background-color: #ff3030;
+}
+
+.orange {
+  background-color: #ff922e;
+}
+
+.green {
+  background-color: #2fbe34;
 }
