--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -80,6 +80,7 @@ h1 {
 
 .flashcard ion-icon {
   font-size: 28px;
+  cursor:pointer;
 }
 
 .turned-flashcard {
@@ -102,6 +103,7 @@ h1 {
   position: absolute;
   bottom: 10px;
   right: 10px;
+  cursor:pointer;
 }
 
 .turned-flashcard p {
@@ -128,6 +130,7 @@ h1 {
   letter-spacing: 0em;
   color: #FFFFFF;
   text-align: center;
+  cursor:pointer;
 }
 
 /* HEADER */
@@ -188,7 +191,8 @@ h1 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-bottom: 15px;
+  margin-top: 5px;
+  margin-bottom: 35px;
 }
 
 .footer-title p{
@@ -205,7 +209,7 @@ h1 {
   left: 0;
   z-index: 1;
   background-color: #ffffff;
-  height: 171px;
+  height: 244px;
   width: 100%;
   box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.05);
   display: flex;
@@ -242,6 +246,8 @@ h1 {
   justify-content: center;
   align-items: center;
   color: #FFFFFF;
+  border: none;
+  cursor: pointer;
   }
 
 /* JS STYLES */
