--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -57,6 +57,16 @@ h1 {
   cursor: pointer;
 }
 
+select{
+  width: 246px;
+  height: 43px;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  font-size: 15px;
+  margin-bottom: 18px;
+  cursor: pointer;
+}
+
 /* FLASHCARD */
 
 .flashcard {
